Demo Requestor changes for v1.2 (09/19/2019)

--- a/dotnet/Web.config
+++ b/dotnet/Web.config
@@ -8,6 +8,13 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
   </configSections>
   <appSettings>
+    <add key="AsAuthUrl" value="https://api.as.testlab.3dsecure.cloud:7443"/>
+    <add key="BaseUrl" value="http://localhost:8082"/>
+    <!--Full file name and path of the client certificate (.p12 or .pfx)-->
+    <add key="CertFileName" value="certs/clientcert.p12"/>
+    <add key="GroupAuth" value="false"/>
+    <!--Your MerchantToken when GroupAuth = true-->
+    <add key="MerchantToken" value=""/>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
