--- a/php/resources/application.ini
+++ b/php/resources/application.ini
@@ -4,3 +4,6 @@ baseUrl = http://localhost:8082
 certFileName =
 ;Path to Private key path generated using openssl command without password
 keyFileName =
+groupAuth = false
+; Your merchantToken when groupAuth = true
+merchantToken =
