--- a/dotnet/Web.config
+++ b/dotnet/Web.config
@@ -33,7 +33,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
-    <sessionState mode="InProc" cookieless="AutoDetect" cookieSameSite="None" />
+    <sessionState mode="InProc" cookieless="false" cookieSameSite="None" />
     <httpCookies sameSite="None"/>
   </system.web>
   <system.webServer>
