--- a/java/pom.xml
+++ b/java/pom.xml
@@ -33,7 +33,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.1.7.RELEASE</version>
+    <version>2.4.5</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
@@ -73,6 +73,7 @@
       <artifactId>httpclient</artifactId>
       <version>4.5.6</version>
     </dependency>
+
   </dependencies>
 
   <build>
